fix cap alignment

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     padding-top: 1em;
     margin: 1em;
     margin-top: 2em;
-    transition: margin 500ms;
+    transition: margin 300ms, padding 500ms, border 500ms;
     border: 0.25em solid black;
     border-top: 0;
     border-radius: 0 0 2.5em 2.5em;
@@ -23,7 +23,8 @@
 }
 
 .capped {
-    border-top: 1em solid;
+    padding-top: 0;
+    border-top: 1em solid black;
 }
 
 .selected-bottle {
